Fix wrapping of gallery images
Adds `flex-wrap` to allow for image gallery section to wrap properly when the window is resized.

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body {
     text-align: center;
     color: #1F2937;
     gap: 15px;
+    flex-wrap: wrap;
 }
 
 .gallery-caption {
